[tool.poetry]
name = "cyberpunk2077"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.23.1"
Flask = "^2.2.2"
d20 = "^1.1.2"
srv = "^1.1.0"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
